kubernetes/demo-4/02-curl-client.yaml
apiVersion: v1
kind: Pod
metadata:
  name: curl-client
  labels:
    app: curl-client
spec:
  serviceAccountName: curl-client
  containers:
    - name: curl-client
      image: docker.io/curlimages/curl:8.11.1
      imagePullPolicy: IfNotPresent
      command:
        - sleep
        - infinity
      securityContext:
        allowPrivilegeEscalation: false
        capabilities:
          drop:
            - ALL
